# blanket

./: .gitignore  .transifex.yml  CONTRIBUTING.md  README.md  SOUNDS_LICENSING.md  TRANSLATORS.md  blanket.doap  blanket.spec  com.rafaelmardojai.Blanket.json  meson.build  pyproject.toml  requirement_for_dev.md
.github/: FUNDING.yml
.github/workflows/: CI.yml
_install/share/applications/: com.rafaelmardojai.Blanket.desktop
_install/share/blanket/blanket/: main.py  mpris.py  preferences.py  preset.py
_install/share/blanket/blanket/widgets/: __init__.py  playpause.py  preset_dialog.py  preset_row.py
_install/share/glib-2.0/schemas/: com.rafaelmardojai.Blanket.gschema.xml  gschemas.compiled
_install/share/icons/hicolor/: icon-theme.cache
_install/share/metainfo/: com.rafaelmardojai.Blanket.metainfo.xml
blanket/: about.py  blanket.in  define.py  main.py  main_player.py  meson.build  mpris.py  player.py  preferences.py  preset.py  presets.py  settings.py  sound.py  widgets.py  window.py
blanket/widgets/: __init__.py  playpause.py  preset_chooser.py  preset_dialog.py  preset_row.py  sound_context_menu.py  sound_item.py  sound_rename_dialog.py  volume_row.py
build-aux/meson/: revision.sh
data/: com.rafaelmardojai.Blanket.appdata.xml.in  com.rafaelmardojai.Blanket.desktop.in  com.rafaelmardojai.Blanket.gschema.xml  com.rafaelmardojai.Blanket.metainfo.xml.in  com.rafaelmardojai.Blanket.service.in  meson.build
data/resources/: about.blp  about.ui  blanket.gresource.xml  grid-item.ui  meson.build  preferences.blp  preferences.ui  preset-chooser.blp  preset-chooser.ui  preset-control.ui  preset-dialog.blp  preset-dialog.ui  preset-row.blp  preset-row.ui  shortcuts.blp  shortcuts.ui  sound-context-menu.blp  sound-context-menu.ui  sound-item.blp  sound-item.ui  sound-rename-dialog.blp  sound-row.ui  style.css  volume-row.blp  volume-row.ui  window.blp  window.ui
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
doc/: Sound_documentation.md
po/: LINGUAS  POTFILES  ar.po  be.po  bg.po  blanket.pot  bn.po  bn_IN.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  (+25 more)
src/: about.py  blanket.in  main.py  meson.build  mpris.py  preferences.py  presets.py  settings.py  sound.py  sounds_settings.py  widgets.py  window.py
src/resources/: blanket.gresource.xml  meson.build  style.css  window.ui
