[project]
name = "Blanket"
version = "0.8.0"
requires-python = ">=3.11"

[tool.pyright]
reportMissingModuleSource = false
reportIncompatibleMethodOverride = false
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pygobject-stubs>=2.13.0",
    "ruff>=0.12.5",
]
